# keccak-batch

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  cliff.toml  flake.nix  release.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benches/: keccak.rs
examples/: perf.rs
src/: dispatch.rs  f1600.rs  lane.rs  lib.rs  single.rs  sponge.rs
src/lane/: avx2.rs  avx512.rs  scalar.rs  simd128.rs
tests/: digest_traits.rs  equivalence.rs  kat.rs
